--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ body {
   padding: 15px;
   font-size: 20px;
   text-align: center;
-  cursor: pointer;
 }
 
 #copy,
@@ -77,6 +76,10 @@ body {
   right: 15px;
   opacity: 0;
   transition: 300ms ease;
+}
+
+#password-el.copy {
+  cursor: pointer;
 }
 
 #password-el.copy ~ #copy {
